# SuperGenius

./: .env.example  .gitignore  COMPETITION.md  README.md  README1.0.md  pyproject.toml
docs/: llm.md
fixtures/: job_brief.json
fixtures/resumes/: 01_strong_fit.txt  02_borderline.txt  03_clear_reject.txt  04_red_flag.txt  05_decent_fit.txt
fixtures/resumes/p5_python_batch/: 01_张明_资深后端.txt  02_李薇_中坚.txt  03_王浩_全栈转后端.txt  04_陈悦_校招少经验.txt  05_刘洋_高并发与架构.txt
scripts/: bootstrap_tables.py  candidate_emitter.py  feishu_bot.py  generate_jd.py  reset_mvp_data.py  run_mvp.py  seed_jobs.py
src/supergenius/: __init__.py  cli.py  config.py  runtime.py
src/supergenius/agents/: __init__.py  analyst_agent.py  base.py  debate_agent.py  hiring_manager.py  hiring_manager_arbiter.py  interview_fanout.py  interviewers.py  jd_strategist.py  offer_and_candidate.py  post_interview.py  reactivation.py  screener.py
src/supergenius/bot/: __init__.py  file_ingest.py  handler.py  intent.py  messenger.py  watcher.py
src/supergenius/feishu/: __init__.py  bitable.py  client.py  field_value.py
src/supergenius/llm/: __init__.py  client.py
src/supergenius/orchestrator/: __init__.py  graph.py  scheduler.py
src/supergenius/prompts/: analyst.md  business_interviewer.md  candidate_response.md  culture_interviewer.md  debate_convergence.md  debate_round.md  gender_infer.md  hiring_manager.md  hiring_manager_arbiter.md  jd_strategist.md  offer_draft.md  offer_negotiation.md  reactivation_match.md  screener.md  tech_interviewer.md
src/supergenius/schema/: __init__.py  bootstrap.py  tables.py
tests/: conftest.py  test_bitable_memory.py  test_bot_intent.py  test_hm_arbiter_fairness.py  test_interview_pipeline.py  test_jd_and_hm.py  test_screener.py
